// Enabler proto 3 i stedet for 2
syntax = "proto3";

// Stores Autogenerated code from .proto file
package com.teacherGrpcService.stubs.teacher;

import "google/protobuf/empty.proto";

// With this line, I am saying that create multiple classes rather than a single class
option java_multiple_files = true;
option java_package = "com.teacherGrpcService.stubs.teacher";

// This is the request message where it takes an id to find data
message TeacherID{
  int64 teacherId = 1;
}

// This is the response message
message Teacher{
  int64 teacherId = 1;
  string name = 2;
  int32 age = 3;
  string mail = 4;
  string subject = 5;
}

// This defines our service for the target folder
service TeacherGRpcService{
  rpc getAllTeachers(google.protobuf.Empty) returns (Teacher);
  rpc getTeacherInfo(TeacherID) returns (Teacher);
  rpc createTeacher(Teacher) returns (Teacher);
  rpc updateTeacher(Teacher) returns (Teacher);
  rpc deleteTeacher(TeacherID) returns (google.protobuf.Empty);
}